- Fix vertical text alignment for all mobilewizard lvl1 rows (e.g. so font name is aligned with font value) - Add missing transparency icon regarding shape shadow
Reviewed-on: https://gerrit.libreoffice.org/82420
Tested-by: Pedro Pinto da Silva <pedro.silva@collabora.com>

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -318,6 +318,10 @@ p.mobile-wizard.ui-combobox-text.selected {
 	display: table;
 }
 
+.ui-header.level-1.mobile-wizard.ui-widget .ui-header-left span.menu-entry-with-icon {
+	vertical-align: middle;
+}
+
 .ui-tabs.mobile-wizard {
 	text-align: center;
 	height: 42px;
